@@ -45,26 +45,26 @@
 
 prskw	kw_pmkfile[] = {
 /*		XXX for compatibility */
-		{".DEFINE",		PMK_TOK_DEFINE, PRS_KW_ITEM}, /* XXX will be node */
-		{".AC_COMPAT",		PMK_TOK_ACCOMP, PRS_KW_ITEM},
-		{".SWITCHES",		PMK_TOK_SWITCH, PRS_KW_ITEM}, /* XXX will be node */
-		{".TARGET",		PMK_TOK_TARGET, PRS_KW_ITEM},
-		{".CHECK_BINARY",	PMK_TOK_CHKBIN, PRS_KW_ITEM},
-		{".CHECK_INCLUDE",	PMK_TOK_CHKINC, PRS_KW_ITEM},
-		{".CHECK_LIB",		PMK_TOK_CHKLIB, PRS_KW_ITEM},
-		{".CHECK_CONFIG",	PMK_TOK_CHKCFG, PRS_KW_ITEM},
-		{".CHECK_PKG_CONFIG",	PMK_TOK_CHKPKG, PRS_KW_ITEM},
-		{".CHECK_TYPE",		PMK_TOK_CHKTYP, PRS_KW_ITEM},
+		{".DEFINE",		PMK_TOK_DEFINE, PRS_KW_ITEM, PRS_TOK_NULL}, /* XXX will be node */
+		{".AC_COMPAT",		PMK_TOK_ACCOMP, PRS_KW_ITEM, PRS_TOK_NULL},
+		{".SWITCHES",		PMK_TOK_SWITCH, PRS_KW_ITEM, PRS_TOK_NULL}, /* XXX will be node */
+		{".TARGET",		PMK_TOK_TARGET, PRS_KW_ITEM, PRS_TOK_NULL},
+		{".CHECK_BINARY",	PMK_TOK_CHKBIN, PRS_KW_ITEM, PRS_TOK_NULL},
+		{".CHECK_INCLUDE",	PMK_TOK_CHKINC, PRS_KW_ITEM, PRS_TOK_NULL},
+		{".CHECK_LIB",		PMK_TOK_CHKLIB, PRS_KW_ITEM, PRS_TOK_NULL},
+		{".CHECK_CONFIG",	PMK_TOK_CHKCFG, PRS_KW_ITEM, PRS_TOK_NULL},
+		{".CHECK_PKG_CONFIG",	PMK_TOK_CHKPKG, PRS_KW_ITEM, PRS_TOK_NULL},
+		{".CHECK_TYPE",		PMK_TOK_CHKTYP, PRS_KW_ITEM, PRS_TOK_NULL},
 /*		XXX new format */
-		{"DEFINE",		PMK_TOK_DEFINE, PRS_KW_ITEM}, /* XXX will be node */
-		{"SETTINGS",		PMK_TOK_SETNGS, PRS_KW_ITEM}, /* XXX will be node */
-		{"SWITCHES",		PMK_TOK_SWITCH, PRS_KW_ITEM}, /* XXX will be node */
-		{"CHECK_BINARY",	PMK_TOK_CHKBIN, PRS_KW_ITEM},
-		{"CHECK_INCLUDE",	PMK_TOK_CHKINC, PRS_KW_ITEM},
-		{"CHECK_LIB",		PMK_TOK_CHKLIB, PRS_KW_ITEM},
-		{"CHECK_CONFIG",	PMK_TOK_CHKCFG, PRS_KW_ITEM},
-		{"CHECK_PKG_CONFIG",	PMK_TOK_CHKPKG, PRS_KW_ITEM},
-		{"CHECK_TYPE",		PMK_TOK_CHKTYP, PRS_KW_ITEM},
+		{"DEFINE",		PMK_TOK_DEFINE, PRS_KW_ITEM, PRS_TOK_NULL}, /* XXX will be node */
+		{"SETTINGS",		PMK_TOK_SETNGS, PRS_KW_ITEM, PRS_TOK_NULL}, /* XXX will be node */
+		{"SWITCHES",		PMK_TOK_SWITCH, PRS_KW_ITEM, PRS_TOK_NULL}, /* XXX will be node */
+		{"CHECK_BINARY",	PMK_TOK_CHKBIN, PRS_KW_ITEM, PRS_TOK_NULL},
+		{"CHECK_INCLUDE",	PMK_TOK_CHKINC, PRS_KW_ITEM, PRS_TOK_NULL},
+		{"CHECK_LIB",		PMK_TOK_CHKLIB, PRS_KW_ITEM, PRS_TOK_NULL},
+		{"CHECK_CONFIG",	PMK_TOK_CHKCFG, PRS_KW_ITEM, PRS_TOK_NULL},
+		{"CHECK_PKG_CONFIG",	PMK_TOK_CHKPKG, PRS_KW_ITEM, PRS_TOK_NULL},
+		{"CHECK_TYPE",		PMK_TOK_CHKTYP, PRS_KW_ITEM, PRS_TOK_NULL}
 };
 
 int	nbkwpf = sizeof(kw_pmkfile) / sizeof(prskw);
