@@ -1,5 +1,7 @@
 06 Sep 2003 mipsator
  * more stuff to permit node command (i will explain later).
+ * modified parse_cell() and prscell_init() to meet our current goal.
+ * added more stuff again for node command.
 
 05 Sep 2003 mipsator
  * improved parser engine again (first part).
